@@ -358,4 +358,12 @@ l([])], 1]], [[2], [-1], [Vecsmall([1])]]], Mat([-2, -3])], Mat([-3, -1, -3]
   ***   at top-level: nfnewprec(vector(16)
   ***                 ^--------------------
   *** nfnewprec: incorrect type in nfnewprec (t_VEC).
-Total time spent: 1552
+[x^7 - x^6 + x^5 - x^4 - x^3 - x^2, x^9 + x^8 + x^7 + x^6 + 2*x^4 + 2*x^3 + 
+x^2 + x + 1, x^10 + x^9 - x^8 - x^3 - x^2 - x, x^10 + x^9 + 2*x^7 + x^6 + x^
+5 + x^4 + 2*x^2 + x + 1, -x^11 - 2*x^10 - x^8 - 2*x^7 - x^6 - x^5 - 2*x^4 - 
+x^3 - 2*x^2 - x - 1, -x^11 - x^10 - 2*x^9 - x^8 - 2*x^7 - x^6 - 2*x^5 - x^4 
+- x^2 - 2*x - 1, -x^11 - x^10 - x^9 + x^8 - x^7 + x^6, -x^11 - x^9 - x^6 + x
+^4 - x^3 + x, x^11 - x^10 + x^6 - x^5 - x^2 - x, x^11 - x^8 - x^7 + x^5 - x^
+4 - x, x^11 + x^10 + 2*x^8 + x^7 + x^4 + x^3 + 2*x^2 + x + 1, x^11 + 2*x^10 
++ x^9 + x^7 + x^5 + x^3 + x^2 + 2*x + 1]
+Total time spent: 1728
