@@ -76,6 +76,7 @@ BA 35- multiif did not handle correctly return() in conditions [#1590]
 XR 55- bnrL1(bnrinit(bnfinit(x^2-168),[6,[1,1]],1)) -> bug in ArtinNumber[#1601]
    56- FpXY_evaly() wrong when evaluating at 0
 BA 57- [win32] gp could crash at start up [#1607]
+   58- nfisincl(t_POL, t_POL) could lead to wrong negative results
 
   Added
     1- add optional argument to sumdigits to specify the base
